--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@mojs/core": "^1.4.0",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1"
   }
