--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "workbench.editor.highlightModifiedTabs": true,
     "vim.enableNeovim": true,
     "livePreview.defaultPreviewPath": "/home/darksouls/Documents/developer_Web/Training_Web_developer/libaryAnimation/index.html",
-    "liveServer.settings.port": 5502
+    "liveServer.settings.port": 5502,
+    "open-in-browser.default": "/var/lib/flatpak/app/org.mozilla.firefox/current/active/export/share/applications/org.mozilla.firefox.desktop"
 }
