--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@mojs/core": "^1.4.0",
+    "@types/prismjs": "^1.26.1",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1"
   }
