--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "homepage": "http://Zarpoosh.github.io/Submit-Form",
+  
   "scripts": {
-    "deploy": "gh-pages -d build",
-    "start": "./index.html",
-    "build": "npm install"
+  
+     "dev": "vite", 
+    "build": "vite build",
+    "preview": "vite preview" 
   },
   "devDependencies": {
     "tailwindcss": "^3.2.7"
@@ -14,6 +16,7 @@
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
     "gsap": "^3.12.5",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "vite": "^5.1.1"
   }
 }
