update change vite module update  GSAP

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "homepage": "http://Zarpoosh.github.io/Submit-Form",
   "type": "module",
   "scripts": {
-  
-     "dev": "vite", 
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview" 
+    "preview": "vite preview"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.7"
@@ -17,6 +16,7 @@
     "animejs": "^3.2.1",
     "gsap": "^3.12.5",
     "prismjs": "^1.29.0",
-    "vite": "^5.1.1"
+    "vite": "^5.1.1",
+    "zepto": "^1.2.0"
   }
 }
